Do not offer password saving when saving is disabled.

This CL implements not saving of passwords in the new Password Manager
architecture when Password Manager saving if off (i.e.
"Offer to save passwords" settings is off).

Bug: 905048, 831123

Change-Id: Ic053f8ae9b28fc1e9d8d80ba5e1a469a4173fdec
Reviewed-on: https://chromium-review.googlesource.com/c/1337344
Reviewed-by: Vaclav Brozek <vabr@chromium.org>
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608380}
Former-commit-id: 2fb05c46a907ec2cf0dfa053b30d8a0dd5ba3e4a